fix(d-navigation): fix pixel padding for notification btn

--- a/scss/templates/components/d-navigation.scss
+++ b/scss/templates/components/d-navigation.scss
@@ -52,7 +52,7 @@
   }
 
   .category-notifications-button > button.dropdown-select-box-header {
-    padding: 0.4375rem;
+    padding: 0.375rem 0.75rem;
     min-height: 0;
     border-radius: 0.25rem;
   }
