fix(d-navigation): show desc with rich text suppport

--- a/javascripts/discourse/templates/components/d-navigation.hbs
+++ b/javascripts/discourse/templates/components/d-navigation.hbs
@@ -11,7 +11,7 @@
 {{/if}}
 {{#if category}}
   <p class="category-description">
-    {{category.description}}
+    {{{category.description}}}
   </p>
 {{/if}}
 {{navigation-bar navItems=navItems filterMode=filterMode category=category}}
